Fixed some minor formats, found a python package in-compatible with windows
huggingface_model.ipynb
at client.run(input_data)
bitsandbytes only works on Linux distribution like ubuntu and macOs
For workaround on windows plz refer to the this post
https://github.com/TimDettmers/bitsandbytes/issues/709

--- a/example/transform/openai_json_test.ipynb
+++ b/example/transform/openai_json_test.ipynb
@@ -30,6 +30,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Json Response format\n",
+    "Specify response_format in ```v1/chat/completion``` api endpoint.\n",
+    "\n",
+    "Please check [supported models](https://platform.openai.com/docs/models/model-endpoint-compatibility) for this endpoint.\n",
+    "\n",
+    "Also, make sure you have a .env file with your OpenAI API key in the root directory of this project.\n",
+    "\n",
+    "```OPENAI_API_KEY=YOUR_API_KEY```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -123,20 +137,6 @@
    "source": [
     "print(completion.choices[0].message.content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
