--- a/example/transform/self_instruct_custom_html_source.ipynb
+++ b/example/transform/self_instruct_custom_html_source.ipynb
@@ -51,14 +51,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "True"
@@ -169,9 +161,9 @@
     {
      "data": {
       "text/plain": [
-       "[Context(context='Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.'),\n",
-       " Context(context='If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.'),\n",
-       " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.')]"
+       "[Context(context='Any notion of information we develop must conform to this intuition.\\r\\nIndeed, in the next sections we will learn how to compute that these\\r\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\r\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\r\\ninformation respectively.'),\n",
+       " Context(context='If we read through these thought experiments, we see a natural idea. As\\r\\na starting point, rather than caring about the knowledge, we may build\\r\\noff the idea that information represents the degree of surprise or the\\r\\nabstract possibility of the event. For example, if we want to describe\\r\\nan unusual event, we need a lot information. For a common event, we may\\r\\nnot need much information.'),\n",
+       " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of\\r\\nCommunication (Shannon, 1948) establishing the theory of\\r\\ninformation. In his article, Shannon introduced the concept of\\r\\ninformation entropy for the first time. We will begin our journey here.')]"
       ]
      },
      "execution_count": 7,
@@ -210,11 +202,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:05<00:00,  1.94s/it]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b0ea04b78894eeaa6f8d9dbff741125",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -230,20 +229,20 @@
      "data": {
       "text/plain": [
        "[{'output': [{'response': [{'context': 'Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.',\n",
-       "      'question': 'How many bits of information do these events have?',\n",
-       "      'answer': '0 bits, 2 bits, ~5.7 bits, and ~225.6 bits.'}],\n",
+       "      'question': 'What is the amount of information associated with the events in the next sections?',\n",
+       "      'answer': 'The events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x28d4dcd60>},\n",
-       " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As a starting point, rather than caring about the knowledge, we may build off the idea that information represents the degree of surprise or the abstract possibility of the event. For example, if we want to describe an unusual event, we need a lot information. For a common event, we may not need much information.',\n",
-       "      'question': 'What does information represent according to the given context?',\n",
+       "  'root': <uniflow.node.node.Node at 0x1f937de3040>},\n",
+       " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As\\r\\na starting point, rather than caring about the knowledge, we may build\\r\\noff the idea that information represents the degree of surprise or the\\r\\nabstract possibility of the event. For example, if we want to describe\\r\\nan unusual event, we need a lot information. For a common event, we may\\r\\nnot need much information.',\n",
+       "      'question': 'What does information represent according to the thought experiments?',\n",
        "      'answer': 'The degree of surprise or the abstract possibility of the event.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x1038a8940>},\n",
+       "  'root': <uniflow.node.node.Node at 0x1f9641d8520>},\n",
        " {'output': [{'response': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
-       "      'question': 'What concept did Claude E. Shannon introduce for the first time in his article?',\n",
-       "      'answer': 'The concept of information entropy.'}],\n",
+       "      'question': 'What concept did Shannon introduce for the first time in his article?',\n",
+       "      'answer': 'Shannon introduced the concept of information entropy for the first time.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x28d4dc9a0>}]"
+       "  'root': <uniflow.node.node.Node at 0x1f9641d9b40>}]"
       ]
      },
      "execution_count": 10,
@@ -270,57 +269,55 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
+       "<style type=\"text/css\">\n",
+       "#T_dd336 th {\n",
+       "  text-align: left;\n",
+       "}\n",
+       "#T_dd336_row0_col0, #T_dd336_row0_col1, #T_dd336_row0_col2, #T_dd336_row1_col0, #T_dd336_row1_col1, #T_dd336_row1_col2, #T_dd336_row2_col0, #T_dd336_row2_col1, #T_dd336_row2_col2 {\n",
+       "  text-align: left;\n",
+       "}\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table id=\"T_dd336\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>context</th>\n",
-       "      <th>question</th>\n",
-       "      <th>answer</th>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_dd336_level0_col0\" class=\"col_heading level0 col0\" >context</th>\n",
+       "      <th id=\"T_dd336_level0_col1\" class=\"col_heading level0 col1\" >question</th>\n",
+       "      <th id=\"T_dd336_level0_col2\" class=\"col_heading level0 col2\" >answer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.</td>\n",
-       "      <td>How many bits of information do these events have?</td>\n",
-       "      <td>0 bits, 2 bits, ~5.7 bits, and ~225.6 bits.</td>\n",
+       "      <th id=\"T_dd336_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_dd336_row0_col0\" class=\"data row0 col0\" >Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.</td>\n",
+       "      <td id=\"T_dd336_row0_col1\" class=\"data row0 col1\" >What is the amount of information associated with the events in the next sections?</td>\n",
+       "      <td id=\"T_dd336_row0_col2\" class=\"data row0 col2\" >The events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>If we read through these thought experiments, we see a natural idea. As a starting point, rather than caring about the knowledge, we may build off the idea that information represents the degree of surprise or the abstract possibility of the event. For example, if we want to describe an unusual event, we need a lot information. For a common event, we may not need much information.</td>\n",
-       "      <td>What does information represent according to the given context?</td>\n",
-       "      <td>The degree of surprise or the abstract possibility of the event.</td>\n",
+       "      <th id=\"T_dd336_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_dd336_row1_col0\" class=\"data row1 col0\" >If we read through these thought experiments, we see a natural idea. As\r\n",
+       "a starting point, rather than caring about the knowledge, we may build\r\n",
+       "off the idea that information represents the degree of surprise or the\r\n",
+       "abstract possibility of the event. For example, if we want to describe\r\n",
+       "an unusual event, we need a lot information. For a common event, we may\r\n",
+       "not need much information.</td>\n",
+       "      <td id=\"T_dd336_row1_col1\" class=\"data row1 col1\" >What does information represent according to the thought experiments?</td>\n",
+       "      <td id=\"T_dd336_row1_col2\" class=\"data row1 col2\" >The degree of surprise or the abstract possibility of the event.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.</td>\n",
-       "      <td>What concept did Claude E. Shannon introduce for the first time in his article?</td>\n",
-       "      <td>The concept of information entropy.</td>\n",
+       "      <th id=\"T_dd336_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_dd336_row2_col0\" class=\"data row2 col0\" >In 1948, Claude E. Shannon published A Mathematical Theory of\n",
+       "Communication (Shannon, 1948) establishing the theory of\n",
+       "information. In his article, Shannon introduced the concept of\n",
+       "information entropy for the first time. We will begin our journey here.</td>\n",
+       "      <td id=\"T_dd336_row2_col1\" class=\"data row2 col1\" >What concept did Shannon introduce for the first time in his article?</td>\n",
+       "      <td id=\"T_dd336_row2_col2\" class=\"data row2 col2\" >Shannon introduced the concept of information entropy for the first time.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "</table>\n"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                                                                                                                                                                                                           context                                                                         question                                                            answer\n",
-       "0                                                                                                                Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.                               How many bits of information do these events have?                       0 bits, 2 bits, ~5.7 bits, and ~225.6 bits.\n",
-       "1  If we read through these thought experiments, we see a natural idea. As a starting point, rather than caring about the knowledge, we may build off the idea that information represents the degree of surprise or the abstract possibility of the event. For example, if we want to describe an unusual event, we need a lot information. For a common event, we may not need much information.                  What does information represent according to the given context?  The degree of surprise or the abstract possibility of the event.\n",
-       "2                                                                                                                                 In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.  What concept did Claude E. Shannon introduce for the first time in his article?                               The concept of information entropy."
+       "<pandas.io.formats.style.Styler at 0x1f9160aa6b0>"
       ]
      },
      "execution_count": 11,
@@ -351,15 +348,12 @@
     "pd.set_option('display.max_colwidth', None)  # or use a specific width like 50\n",
     "pd.set_option('display.width', 1000)\n",
     "\n",
-    "df"
+    "styled_df = df.style.set_properties(**{'text-align': 'left'}).set_table_styles([{\n",
+    "    'selector': 'th',\n",
+    "    'props': [('text-align', 'left')]\n",
+    "}])\n",
+    "styled_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
