--- a/example/transform/self_instruct_html_source.ipynb
+++ b/example/transform/self_instruct_html_source.ipynb
@@ -51,14 +51,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "True"
@@ -161,9 +153,9 @@
     {
      "data": {
       "text/plain": [
-       "[Context(context='Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.'),\n",
-       " Context(context='If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.'),\n",
-       " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.')]"
+       "[Context(context='Any notion of information we develop must conform to this intuition.\\r\\nIndeed, in the next sections we will learn how to compute that these\\r\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\r\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\r\\ninformation respectively.'),\n",
+       " Context(context='If we read through these thought experiments, we see a natural idea. As\\r\\na starting point, rather than caring about the knowledge, we may build\\r\\noff the idea that information represents the degree of surprise or the\\r\\nabstract possibility of the event. For example, if we want to describe\\r\\nan unusual event, we need a lot information. For a common event, we may\\r\\nnot need much information.'),\n",
+       " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of\\r\\nCommunication (Shannon, 1948) establishing the theory of\\r\\ninformation. In his article, Shannon introduced the concept of\\r\\ninformation entropy for the first time. We will begin our journey here.')]"
       ]
      },
      "execution_count": 7,
@@ -199,18 +191,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/3 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:05<00:00,  1.96s/it]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a1ecf35af9ba465d8a54803d7d542917",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -225,15 +217,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': ['question: How much information do the events have, according to the next sections?\\nanswer: The events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.'],\n",
+       "[{'output': [{'response': ['question: How many bits of information do the events have?\\nanswer: 0 bits, 2 bits, 5.7 bits, and 225.6 bits respectively.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7fc4d2551180>},\n",
-       " {'output': [{'response': ['question: What does information represent in the context of describing an unusual event?\\nanswer: The degree of surprise or the abstract possibility of the event.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x19e0f3d3c10>},\n",
+       " {'output': [{'response': ['question: How does information represent the degree of surprise or abstract possibility of an event?\\nanswer: Information represents the degree of surprise or abstract possibility of an event by requiring more information to describe an unusual event and less information for a common event.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7fc4d2550e50>},\n",
-       " {'output': [{'response': ['question: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x19e0f3e8370>},\n",
+       " {'output': [{'response': ['question: Who introduced the concept of information entropy for the first time?\\nanswer: Claude E. Shannon.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7fc4d2552b90>}]"
+       "  'root': <uniflow.node.node.Node at 0x19e0f3e9cf0>}]"
       ]
      },
      "execution_count": 10,
@@ -260,53 +252,43 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
+       "<style type=\"text/css\">\n",
+       "#T_6309f th {\n",
+       "  text-align: left;\n",
+       "}\n",
+       "#T_6309f_row0_col0, #T_6309f_row0_col1, #T_6309f_row1_col0, #T_6309f_row1_col1, #T_6309f_row2_col0, #T_6309f_row2_col1 {\n",
+       "  text-align: left;\n",
+       "}\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table id=\"T_6309f\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question</th>\n",
-       "      <th>answer</th>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_6309f_level0_col0\" class=\"col_heading level0 col0\" >question</th>\n",
+       "      <th id=\"T_6309f_level0_col1\" class=\"col_heading level0 col1\" >answer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>How much information do the events have, according to the next sections?</td>\n",
-       "      <td>The events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.</td>\n",
+       "      <th id=\"T_6309f_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_6309f_row0_col0\" class=\"data row0 col0\" > How many bits of information do the events have?</td>\n",
+       "      <td id=\"T_6309f_row0_col1\" class=\"data row0 col1\" > 0 bits, 2 bits, 5.7 bits, and 225.6 bits respectively.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>What does information represent in the context of describing an unusual event?</td>\n",
-       "      <td>The degree of surprise or the abstract possibility of the event.</td>\n",
+       "      <th id=\"T_6309f_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_6309f_row1_col0\" class=\"data row1 col0\" > How does information represent the degree of surprise or abstract possibility of an event?</td>\n",
+       "      <td id=\"T_6309f_row1_col1\" class=\"data row1 col1\" > Information represents the degree of surprise or abstract possibility of an event by requiring more information to describe an unusual event and less information for a common event.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Who published A Mathematical Theory of Communication in 1948?</td>\n",
-       "      <td>Claude E. Shannon.</td>\n",
+       "      <th id=\"T_6309f_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_6309f_row2_col0\" class=\"data row2 col0\" > Who introduced the concept of information entropy for the first time?</td>\n",
+       "      <td id=\"T_6309f_row2_col1\" class=\"data row2 col1\" > Claude E. Shannon.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "</table>\n"
       ],
       "text/plain": [
-       "                                                                          question                                                                                                                                        answer\n",
-       "0         How much information do the events have, according to the next sections?   The events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.\n",
-       "1   What does information represent in the context of describing an unusual event?                                                                              The degree of surprise or the abstract possibility of the event.\n",
-       "2                    Who published A Mathematical Theory of Communication in 1948?                                                                                                                            Claude E. Shannon."
+       "<pandas.io.formats.style.Styler at 0x19e0f46e200>"
       ]
      },
      "execution_count": 11,
@@ -357,7 +339,11 @@
     "pd.set_option('display.max_colwidth', None)  # or use a specific width like 50\n",
     "pd.set_option('display.width', 1000)\n",
     "\n",
-    "df"
+    "styled_df = df.style.set_properties(**{'text-align': 'left'}).set_table_styles([{\n",
+    "    'selector': 'th',\n",
+    "    'props': [('text-align', 'left')]\n",
+    "}])\n",
+    "styled_df"
    ]
   }
  ],
