Updated readme import path, fixed example format

--- a/example/transform/openai_jupyter_notebook_QA.ipynb
+++ b/example/transform/openai_jupyter_notebook_QA.ipynb
@@ -65,7 +65,7 @@
     "from dotenv import load_dotenv\n",
     "from pprint import pprint\n",
     "\n",
-    "from uniflow.flow.client import TransformClient\n",
+    "from uniflow.flow.client import TransformClient as Client\n",
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
@@ -344,7 +344,7 @@
     "    guided_prompt_template=guided_prompt,\n",
     "    model_config=OpenAIModelConfig(response_format={\"type\": \"json_object\"}),\n",
     ")\n",
-    "client = TransformClient(config)"
+    "client = Client(config)"
    ]
   },
   {
@@ -363,7 +363,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "359ef8e72db7415f949f1a06ec220ec6",
+       "model_id": "6832079ceb204ebfa6c88dc55bfc27c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "01d7a120",
    "metadata": {},
    "outputs": [
