rename linear op, flow, and transform to copy. move node to uniflow root directory

--- a/example/pipeline/pipeline_txt.ipynb
+++ b/example/pipeline/pipeline_txt.ipynb
@@ -34,8 +34,8 @@
      "data": {
       "text/plain": [
        "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'],\n",
-       " 'transform': ['TransformHuggingFaceFlow',\n",
-       "  'TransformLinearFlow',\n",
+       " 'transform': ['TransformCopyFlow',\n",
+       "  'TransformHuggingFaceFlow',\n",
        "  'TransformLMQGFlow',\n",
        "  'TransformOpenAIFlow']}"
       ]
