--- a/example/server_client/server_client.ipynb
+++ b/example/server_client/server_client.ipynb
@@ -18,32 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from uniflow.flow.client import TransformClient\n",
-    "from uniflow.flow.config import TransformLinearConfig\n",
+    "from uniflow.flow.config import TransformCopyConfig\n",
     "from uniflow.flow.flow_factory import FlowFactory\n",
     "from uniflow.viz import Viz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'],\n",
-       " 'transform': ['TransformHuggingFaceFlow',\n",
-       "  'TransformLinearFlow',\n",
+       " 'transform': ['TransformCopyFlow',\n",
+       "  'TransformHuggingFaceFlow',\n",
        "  'TransformLMQGFlow',\n",
        "  'TransformOpenAIFlow']}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +75,7 @@
     }
    ],
    "source": [
-    "client = TransformClient(TransformLinearConfig())\n",
+    "client = TransformClient(TransformCopyConfig())\n",
     "input = [{\"a\": 1, \"b\": 2}, {\"c\": 3, \"d\": 4}, {\"e\": 5, \"f\": 6}, {\"g\": 7, \"h\": 8}]\n",
     "output = client.run(input)"
    ]
