--- a/example/viz/graph_render.ipynb
+++ b/example/viz/graph_render.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "from IPython.display import display\n",
     "\n",
-    "from uniflow.node.node import Node\n",
+    "from uniflow.node import Node\n",
     "from uniflow.viz import Viz"
    ]
   },
