--- a/example/transform/openai_model.ipynb
+++ b/example/transform/openai_model.ipynb
@@ -40,16 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,20 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'],\n",
-       " 'transform': ['TransformHuggingFaceFlow',\n",
-       "  'TransformLinearFlow',\n",
+       " 'transform': ['TransformCopyFlow',\n",
+       "  'TransformHuggingFaceFlow',\n",
        "  'TransformLMQGFlow',\n",
        "  'TransformOpenAIFlow']}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
