update markdown example

--- a/example/extract/extract_md.ipynb
+++ b/example/extract/extract_md.ipynb
@@ -111,7 +111,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 13888.42it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 11915.64it/s]\n"
      ]
     }
    ],
@@ -137,32 +137,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'content': '# README文件\\n关于 README.md 文件。',\n",
-      "  'metadata': {'Header 1': 'README文件'}},\n",
-      " {'content': '## 概述\\n'\n",
-      "             '`README.md` 文件是描述一个目录的 Markdown 文件。当你在 GitHub 和 Gitiles '\n",
-      "             '中浏览这个目录时，就会展现这个文件。\\n'\n",
-      "             '例如，当你查看这个目录的内容时，就会展现它里面的 /README.md 文件：\\n'\n",
-      "             'https://github.com/google/styleguide/tree/gh-pages\\n'\n",
-      "             '在 Gitiles 中，当显示仓库库索引时，在 `HEAD` 引用中的 `README.md` 也会展现出来：\\n'\n",
-      "             'https://gerrit.googlesource.com/gitiles/',\n",
-      "  'metadata': {'Header 1': 'README文件', 'Header 2': '概述'}},\n",
-      " {'content': '## 准则\\n'\n",
-      "             '**`README.md` 文件旨在为浏览您的代码的工程师（尤其是初次使用的用户）提供方向**。 `README.md` '\n",
-      "             '文件可能是读者在浏览包含您的代码的目录时遇到的第一个文件。这种情况下，它也充当了目录的说明页面。\\n'\n",
-      "             '我们建议您的代码的顶级目录包含最新的`README.md`文件。这对于为其他团队提供接口的软件包目录尤其重要。',\n",
-      "  'metadata': {'Header 1': 'README文件', 'Header 2': '准则'}},\n",
-      " {'content': '### 文件名\\n统一用 `README.md`。在 Gitiles 的目录视图中，不会显示名字叫 `README` 的文件。',\n",
-      "  'metadata': {'Header 1': 'README文件', 'Header 2': '准则', 'Header 3': '文件名'}},\n",
-      " {'content': '### 内容\\n'\n",
-      "             '至少每个包级别的 `README.md` 都应当包含或指向以下信息：\\n'\n",
-      "             '1.  **此包/库中有什么**，它的用途是什么。\\n'\n",
-      "             '2.  **联系谁**。\\n'\n",
-      "             '3.  **状态**：此包/库是否已弃用，是否不用于一般发布等。\\n'\n",
-      "             '4.  **更多信息**：哪里能找到更详细的文档，例如：\\n'\n",
-      "             '* overview.md 文件，提供更详细的概念信息。\\n'\n",
-      "             '* 使用此软件包/库的任何 API 文档。',\n",
-      "  'metadata': {'Header 1': 'README文件', 'Header 2': '准则', 'Header 3': '内容'}}]\n"
+      "[{'content': '# Getting Started', 'metadata': {'Header 1': 'Getting Started'}},\n",
+      " {'content': '## What is Markdown?\\n'\n",
+      "             'Markdown is a lightweight markup language that you can use to '\n",
+      "             'add formatting elements to plaintext text documents. Created by '\n",
+      "             'John Gruber in 2004, Markdown is now one of the world’s most '\n",
+      "             'popular markup languages.',\n",
+      "  'metadata': {'Header 1': 'Getting Started', 'Header 2': 'What is Markdown?'}},\n",
+      " {'content': '### Example\\n'\n",
+      "             'For example, to denote a heading, you add a number sign before '\n",
+      "             'it (e.g., # Heading One). Or to make a phrase bold, you add two '\n",
+      "             'asterisks before and after it (e.g., **this text is bold**). It '\n",
+      "             'may take a while to get used to seeing Markdown syntax in your '\n",
+      "             'text, especially if you’re accustomed to WYSIWYG applications. '\n",
+      "             'The screenshot below shows a Markdown file displayed in the '\n",
+      "             'Visual Studio Code text editor.',\n",
+      "  'metadata': {'Header 1': 'Getting Started',\n",
+      "               'Header 2': 'What is Markdown?',\n",
+      "               'Header 3': 'Example'}},\n",
+      " {'content': '## Why Use Markdown?\\n'\n",
+      "             'You might be wondering why people use Markdown instead of a '\n",
+      "             'WYSIWYG editor. Why write with Markdown when you can press '\n",
+      "             'buttons in an interface to format your text? As it turns out, '\n",
+      "             'there are several reasons why people use Markdown instead of '\n",
+      "             'WYSIWYG editors.',\n",
+      "  'metadata': {'Header 1': 'Getting Started', 'Header 2': 'Why Use Markdown?'}},\n",
+      " {'content': '## Kicking the Tires\\n'\n",
+      "             'The best way to get started with Markdown is to use it. That’s '\n",
+      "             'easier than ever before thanks to a variety of free tools.\\n'\n",
+      "             'You don’t even need to download anything. There are several '\n",
+      "             'online Markdown editors that you can use to try writing in '\n",
+      "             'Markdown. Dillinger is one of the best online Markdown editors. '\n",
+      "             'Just open the site and start typing in the left pane. A preview '\n",
+      "             'of the rendered document appears in the right pane.',\n",
+      "  'metadata': {'Header 1': 'Getting Started', 'Header 2': 'Kicking the Tires'}},\n",
+      " {'content': '## How Does it Work?\\n'\n",
+      "             'Dillinger makes writing in Markdown easy because it hides the '\n",
+      "             'stuff happening behind the scenes, but it’s worth exploring how '\n",
+      "             'the process works in general.\\n'\n",
+      "             'When you write in Markdown, the text is stored in a plaintext '\n",
+      "             'file that has an .md or .markdown extension. But then what? How '\n",
+      "             'is your Markdown-formatted file converted into HTML or a '\n",
+      "             'print-ready document?',\n",
+      "  'metadata': {'Header 1': 'Getting Started', 'Header 2': 'How Does it Work?'}}]\n"
      ]
     }
    ],
