Add markdown and ipynb support

--- a/example/extract/extract_pdf.ipynb
+++ b/example/extract/extract_pdf.ipynb
@@ -120,7 +120,7 @@
    ],
    "source": [
     "data = [\n",
-    "    {\"pdf\": input_file},\n",
+    "    {\"filename\": input_file},\n",
     "]\n",
     "\n",
     "config = ExtractPDFConfig(\n",
